limit numpy version

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,7 +25,7 @@ include_package_data = True
 install_requires =
     appdirs >= 1.4.4
     importlib_resources
-    numpy >= 1.20
+    numpy >= 1.20, < 2.0.0  # 2.0.0 fails with pint
     h5py > 3.7.0
     matplotlib >= 3.5.2
     IPython >= 7.34.0  # colab wants 7.34.0
