--- a/setup.cfg
+++ b/setup.cfg
@@ -38,7 +38,7 @@ install_requires =
     ontolutils>=0.2.20
     python-forge # == 18.6.0
     requests
-    pydantic >= 2.3.0
+    pydantic >= 2.3.0, < 2.8.0
     rdflib
 
 [options.extras_require]
