--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = h5rdmtoolbox
-version = 1.4.0rc2
+version = 1.4.0
 author = Matthias Probst
 author_email = matthias.probst@kit.edu
 description = Supporting a FAIR Research Data lifecycle using Python and HDF5.
@@ -39,7 +39,7 @@ install_requires =
     python-forge # == 18.6.0
     requests
     pydantic >= 2.3.0, < 2.8.0
-    rdflib
+    rdflib<=7.0.0
 
 [options.extras_require]
 database=
@@ -59,7 +59,7 @@ test =
     pytest >= 7.1.2
     pytest-cov
     pylint
-    mongomock
+    mongomock == 4.1.2
     xmltodict
     scipy  # provides netcdf4
     %(csv)s
