--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = h5rdmtoolbox
-version = 1.4.1
+version = 1.5.0
 author = Matthias Probst
 author_email = matthias.probst@kit.edu
 description = Supporting a FAIR Research Data lifecycle using Python and HDF5.
@@ -34,16 +34,16 @@ install_requires =
     pint == 0.21.1  # pint >= 0.19.2<0.22.0 Note: 0.22.0 shows bad str-output for quantities with format Lx~
     pint_xarray >= 0.2.1
     regex>=2020.7.9
-    packaging
-    ontolutils>=0.2.20
+    packaging>=24.1
+    ontolutils>=0.5.0
     python-forge == 18.6.0
-    requests
-    pydantic >= 2.3.0, < 2.8.0
-    rdflib<=7.0.0
+    requests>=2.32.3
+    pydantic>=2.8.2
+    rdflib>=7.0.0
 
 [options.extras_require]
 database=
-    pymongo>=4.2.0
+    pymongo>=4.2.0,<4.9.0
 layout_validation=
     tabulate>=0.8.10,<=0.9.0
 csv =
@@ -71,7 +71,7 @@ docs =
     %(snt)s
     %(database)s
     %(test)s
-    jupyterlab
+;     jupyterlab>4.0.0
     Sphinx >= 3,<5
     sphinx_book_theme == 0.3.3
     sphinx-copybutton
