--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,8 +1,8 @@
 -e .
 -r requirements.txt
-pytest>=7.1.2
-pytest-cov
+pytest>=8.3.3
+pytest-cov>=5.0.0
 mongomock == 4.1.2
-scikit-image
-scikit-learn
-scipy
+scikit-image>=1.3.2
+scikit-learn>=0.21.0
+scipy>=1.10.1
