--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,6 +3,6 @@
 pytest>=8.3.3
 pytest-cov>=5.0.0
 mongomock == 4.1.2
-scikit-image>=1.3.2
-scikit-learn>=0.21.0
+scikit-image>=0.21.0
+scikit-learn
 scipy>=1.10.1
