--- a/requirements-doc.txt
+++ b/requirements-doc.txt
@@ -1,10 +1,11 @@
 -e .
 -r requirements.txt
-sphinx >= 4.5.0
-sphinx_book_theme>=0.3.3
-sphinx-copybutton>=0.5.2
-sphinx-design>=0.4.1
-myst-nb>=0.17.2
-sphinxcontrib-bibtex>=2.6.3
-kglab>=2.6.3
-scikit-image>=1.3.2
+Sphinx==4.5.0
+sphinx_book_theme==0.3.3
+sphinx-copybutton==0.5.2
+sphinx-design==0.4.1
+myst-nb==0.17.2
+sphinxcontrib-bibtex==2.6.3
+
+scikit-image==0.24.0
+scikit-learn
