--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = h5rdmtoolbox
 version = 1.5.0
 author = Matthias Probst
-author_email = matthias.probst@kit.edu
+author_email = matth.probst@gmail.com
 description = Supporting a FAIR Research Data lifecycle using Python and HDF5.
 long_description = file: README.md
 long_description_content_type = text/markdown
