--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = h5rdmtoolbox
-version = 1.5.0
+version = 1.5.1
 author = Matthias Probst
 author_email = matth.probst@gmail.com
 description = Supporting a FAIR Research Data lifecycle using Python and HDF5.
@@ -59,6 +59,7 @@ test =
     pytest>=8.3.3
     pytest-cov>=5.0.0
     pylint
+    ssnolib>=1.3.0.1a4
     mongomock==4.1.2
     xmltodict<=0.13.0
     scipy>=1.10.1  # provides netcdf4
