hotfix pymongo collection issue

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,7 +43,7 @@ install_requires =
 
 [options.extras_require]
 database=
-    pymongo>=4.2.0,<4.9.0
+    pymongo>=4.2.0,<=4.10.1
 layout_validation=
     tabulate>=0.8.10,<=0.9.0
 csv =
