--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ python-forge==18.6.0
 requests>=2.32.3
 rdflib>=7.0.0
 # database:
-pymongo>=4.2.0,<4.9.0
+pymongo>=4.2.0,<=4.10.1
 # csv
 pandas>=1.4.3
 # snt
