--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = h5rdmtoolbox
-version = 1.6.0
+version = 1.6.1
 author = Matthias Probst
 author_email = matth.probst@gmail.com
 description = Supporting a FAIR Research Data lifecycle using Python and HDF5.
@@ -35,7 +35,7 @@ install_requires =
     pint_xarray >= 0.2.1
     regex>=2020.7.9
     packaging>=24.1
-    ontolutils>=0.12.2
+    ontolutils>=0.13.2
     python-forge==18.6.0
     requests>=2.32.3
     pydantic>=2.8.2
@@ -104,4 +104,4 @@ testpaths = tests
 
 [options.entry_points]
 console_scripts =
-    h5tbx = h5rdmtoolbox.cli:main
+    h5tbx = h5rdmtoolbox.cli:cli
