add first cli tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -104,4 +104,4 @@ testpaths = tests
 
 [options.entry_points]
 console_scripts =
-    h5tbx = h5rdmtoolbox.cli:cli
+    h5tbx = h5rdmtoolbox.cli:h5tbx
