--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,7 @@ install_requires =
     requests>=2.32.3
     pydantic>=2.8.2
     rdflib>=7.0.0
+    click==8.1.7
 
 [options.extras_require]
 database=
