update versions and linked data features
* update cli and add serialize, use ontolutils for hdf5 ontology

* fix tests

* update docs

* add first cli tests

* add click

* bugfix

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,11 +35,12 @@ install_requires =
     pint_xarray >= 0.2.1
     regex>=2020.7.9
     packaging>=24.1
-    ontolutils>=0.12.4
+    ontolutils>=0.13.2
     python-forge==18.6.0
     requests>=2.32.3
     pydantic>=2.8.2
     rdflib>=7.0.0
+    click==8.1.7
 
 [options.extras_require]
 database=
@@ -71,11 +72,11 @@ docs =
     %(snt)s
     %(database)s
     %(test)s
-    Sphinx==4.5.0
-    sphinx_book_theme==0.3.3
+    Sphinx==8.0.0
+    sphinx_book_theme==1.1.3
     sphinx-copybutton==0.5.2
-    sphinx-design==0.4.1
-    myst-nb==0.17.2
+    sphinx-design==0.6.1
+    myst-nb==1.2.0
     sphinxcontrib-bibtex==2.6.3
     scikit-image>=0.21.0
     scikit-learn
@@ -104,4 +105,4 @@ testpaths = tests
 
 [options.entry_points]
 console_scripts =
-    h5tbx = h5rdmtoolbox.cli:main
+    h5tbx = h5rdmtoolbox.cli:h5tbx
