--- a/setup.cfg
+++ b/setup.cfg
@@ -60,6 +60,7 @@ test =
     pytest>=8.3.3
     pytest-cov>=5.0.0
     pylint
+    scikit-image
     ssnolib>=1.3.0.1a11
     mongomock==4.1.2
     xmltodict<=0.13.0
