--- a/requirements-doc.txt
+++ b/requirements-doc.txt
@@ -1,10 +1,12 @@
 -e .
 -r requirements.txt
 Sphinx==8.0.0
-sphinx_book_theme==1.1.3
+sphinx_book_theme==1.1.4
+pydata-sphinx-theme==0.15.4
 sphinx-copybutton==0.5.2
 sphinx-design== 0.6.1
 myst-nb==1.2.0
 sphinxcontrib-bibtex==2.6.3
 scikit-image>=0.21.0
+kglab
 scikit-learn
