manage to work with differnt xarray versions

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,7 @@ install_requires =
     matplotlib >= 3.5.2
     IPython >= 7.34.0  # colab wants 7.34.0
     pyyaml > 6.0  # 5.4 does not work with python 3.11!
-    xarray >= 2022.3.0, <2025.3.0
+    xarray >= 2022.3.0
     pint==0.21.1  # pint >= 0.19.2<0.22.0 Note: 0.22.0 shows bad str-output for quantities with format Lx~
     pint_xarray >= 0.2.1
     regex>=2020.7.9
