--- a/setup.cfg
+++ b/setup.cfg
@@ -61,7 +61,7 @@ test =
     pytest-cov>=5.0.0
     pylint
     scikit-image
-    ssnolib>=1.3.0.1a11
+    ssnolib>=1.5.0.1
     mongomock==4.1.2
     xmltodict<=0.13.0
     scipy>=1.10.1  # provides netcdf4
