--- a/h5rdmtoolbox/data/tutorial_convention.yaml
+++ b/h5rdmtoolbox/data/tutorial_convention.yaml
@@ -19,12 +19,19 @@ units:
   validator: $units
   description: The physical unit of the dataset. If dimensionless, the unit is ''.
 
+title:
+  description: Title of the HDF5 file acting as a minimal description of the dataset.
+  target_method: __init__
+  validator: str
+  frdf_predicate: https://schema.org/title
+
 standard_name:
   target_method: create_dataset
   validator: $standardNameType
   requirements: units
   description: Standard name of the dataset. If not set, the long_name attribute must be given.
   alternative_standard_attribute: long_name
+  default_value: $EMPTY
 
 standard_name_table:
   target_method: __init__
