--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = h5rdmtoolbox
-version = 2.0.0a0
+version = 2.0.0
 author = Matthias Probst
 author_email = matth.probst@gmail.com
 description = Supporting a FAIR Research Data lifecycle using Python and HDF5.
@@ -61,7 +61,7 @@ test =
     pytest-cov>=5.0.0
     pylint
     scikit-image
-    ssnolib>=1.5.0.1
+    ssnolib>=1.5.1.2
     mongomock==4.1.2
     xmltodict<=0.13.0
     scipy>=1.10.1  # provides netcdf4
