--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,7 @@ install_requires =
     pyyaml > 6.0  # 5.4 does not work with python 3.11!
     xarray >= 2022.3.0
     pint==0.21.1  # pint >= 0.19.2<0.22.0 Note: 0.22.0 shows bad str-output for quantities with format Lx~
-    pint_xarray >= 0.2.1
+    pint_xarray >= 0.2.1, <= 0.4.0
     regex>=2020.7.9
     packaging>=24.1
     ontolutils>=0.13.3
