--- a/setup.cfg
+++ b/setup.cfg
@@ -23,18 +23,18 @@ python_requires = >=3.9, <3.13
 include_package_data = True
 install_requires =
     appdirs >= 1.4.4
-    importlib_resources
+    importlib_resources>=6.5.2, <7.0.0
     numpy >= 1.20, < 2.0.0  # 2.0.0 fails with pint
-    h5py > 3.7.0
+    h5py >= 3.8.0, <4.0.0
     matplotlib >= 3.5.2
     IPython >= 7.34.0  # colab wants 7.34.0
-    pyyaml > 6.0  # 5.4 does not work with python 3.11!
+    pyyaml >= 6.0  # 5.4 does not work with python 3.11!
     xarray >= 2022.3.0
     pint==0.21.1  # pint >= 0.19.2<0.22.0 Note: 0.22.0 shows bad str-output for quantities with format Lx~
     pint_xarray >= 0.2.1, <= 0.4.0
     regex>=2020.7.9
     packaging>=24.1
-    ontolutils>=0.13.3
+    ontolutils>=0.13.3,<=1.0.0
     python-forge==18.6.0
     requests>=2.32.3
     pydantic>=2.8.2
@@ -81,11 +81,14 @@ docs =
     sphinxcontrib-bibtex==2.6.3
     scikit-image>=0.21.0
     scikit-learn
-    
+
 complete =
     %(layout_validation)s
     %(gui)s
     %(test)s
+
+complete-with-docs =
+    %(complete)s
     %(docs)s
 
 [options.package_data]
