--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 appdirs>=1.4.4
 numpy>=1.20
-h5py>3.7.0
+h5py>=3.8.0, <4.0.0
 matplotlib>=3.5.2
 IPython>=8.4.0
 pyyaml>6.0.0
@@ -23,5 +23,5 @@ python-gitlab
 pypandoc>=1.11
 pydantic>=2.8.2
 # other:
-ontolutils >= 0.13.3
+ontolutils>=0.13.3,<=1.0.0
 click==8.1.7
