--- a/setup.cfg
+++ b/setup.cfg
@@ -34,7 +34,7 @@ install_requires =
     pint_xarray >= 0.2.1, <= 0.4.0
     regex>=2020.7.9
     packaging>=24.1
-    ontolutils>=0.13.3,<=1.0.0
+    ontolutils>=0.13.3,<0.20.0
     python-forge==18.6.0
     requests>=2.32.3
     pydantic>=2.8.2
