--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ pint_xarray>=0.2.1,<0.4.0
 regex>=2020.7.9
 packaging>=24.1
 python-forge==18.6.0
-requests>=2.32.3
+requests>=2.32.4
 rdflib>=7.0.0
 # database:
 pymongo>=4.2.0,<=4.10.1
@@ -21,7 +21,7 @@ xmltodict<=0.13.0
 tabulate>=0.8.10,<=0.9.0
 python-gitlab
 pypandoc>=1.11
-pydantic>=2.8.2
+pydantic>=2.8.2,<3.0.0
 # other:
-ontolutils>=0.13.3,<=1.0.0
+ontolutils>=0.19.2,<0.20.0
 click==8.1.7
