--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = h5rdmtoolbox
-version = 2.2.0
+version = 2.2.1
 author = Matthias Probst
 author_email = matth.probst@gmail.com
 description = Supporting a FAIR Research Data lifecycle using Python and HDF5.
@@ -34,10 +34,10 @@ install_requires =
     pint_xarray >= 0.2.1, <= 0.4.0
     regex>=2020.7.9
     packaging>=24.1
-    ontolutils>=0.13.3,<=1.0.0
+    ontolutils>=0.19.2,<0.20.0
     python-forge==18.6.0
-    requests>=2.32.3
-    pydantic>=2.8.2
+    requests>=2.32.4
+    pydantic>=2.8.2,<3.0.0
     rdflib>=7.0.0
     click==8.1.7
 
