--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = h5rdmtoolbox
-version = 2.2.1
+version = 2.2.2
 author = Matthias Probst
 author_email = matth.probst@gmail.com
 description = Supporting a FAIR Research Data lifecycle using Python and HDF5.
@@ -22,10 +22,10 @@ packages = find:
 python_requires = >=3.9, <3.13
 include_package_data = True
 install_requires =
-    appdirs >= 1.4.4
+    appdirs~=1.4.4
     importlib_resources>=6.5.2, <7.0.0
     numpy >= 1.20, < 2.0.0  # 2.0.0 fails with pint
-    h5py >= 3.8.0, <4.0.0
+    h5py>=3.8.0,<4.0.0
     matplotlib >= 3.5.2
     IPython >= 7.34.0  # colab wants 7.34.0
     pyyaml >= 6.0  # 5.4 does not work with python 3.11!
@@ -37,8 +37,8 @@ install_requires =
     ontolutils>=0.19.2,<0.20.0
     python-forge==18.6.0
     requests>=2.32.4
-    pydantic>=2.8.2,<3.0.0
-    rdflib>=7.0.0
+    pydantic~=2.8.2
+    rdflib~=7.0.0
     click==8.1.7
 
 [options.extras_require]
