--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ regex>=2020.7.9
 packaging>=24.1
 python-forge==18.6.0
 requests>=2.32.4
-rdflib>=7.0.0
+rdflib~=7.1.3
 # database:
 pymongo>=4.2.0,<=4.10.1
 # csv
