--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-appdirs>=1.4.4
+appdirs~=1.4.4
 numpy>=1.20
-h5py>=3.8.0, <4.0.0
+h5py>=3.8.0,<4.0.0
 matplotlib>=3.5.2
 IPython>=8.4.0
 pyyaml>6.0.0
@@ -11,7 +11,7 @@ regex>=2020.7.9
 packaging>=24.1
 python-forge==18.6.0
 requests>=2.32.4
-rdflib>=7.0.0
+rdflib~=7.1.3
 # database:
 pymongo>=4.2.0,<=4.10.1
 # csv
