--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,7 +3,5 @@
 pytest>=8.3.3
 pytest-cov>=5.0.0
 mongomock == 4.1.2
-scikit-image>=0.21.0
-scikit-learn
 scipy>=1.10.1
-ssnolib>=1.5.0.1
+ssnolib @ git+https://github.com/matthiasprobst/ssnolib@v1514
