--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ IPython>=8.4.0
 pyyaml>6.0.0
 xarray>=2022.3.0
 pint==0.25.0
-pint_xarray>=0.2.1,<0.4.0
+pint_xarray>=0.2.1,<=0.6.0
 regex>=2020.7.9
 packaging>=24.1
 python-forge==18.6.0
