--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,8 @@ classifiers =
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
     Programming Language :: Python :: 3.12
+    Programming Language :: Python :: 3.13
+    Programming Language :: Python :: 3.14
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
     Development Status :: 4 - Beta
@@ -19,7 +21,7 @@ classifiers =
 
 [options]
 packages = find:
-python_requires = >=3.9, <3.13
+python_requires = >=3.9, <3.15
 include_package_data = True
 install_requires =
     appdirs~=1.4
@@ -31,7 +33,7 @@ install_requires =
     pyyaml >= 6.0  # 5.4 does not work with python 3.11!
     xarray >= 2022.3.0
     pint==0.25.0  # pint >= 0.19.2<0.22.0 Note: 0.22.0 shows bad str-output for quantities with format Lx~
-    pint_xarray >= 0.2.1, <= 0.4.0
+    pint_xarray >= 0.2.1, <=0.6.0
     regex>=2020.7.9
     packaging>=24.1
 ;     ontolutils>=0.19.2,<0.20.0
@@ -60,12 +62,13 @@ test =
     pytest>=8.3.3
     pytest-cov>=5.0.0
     pylint
-    scikit-image
-    ssnolib>=1.5.1.2
+;     ssnolib>=1.5.1.4
+    ssnolib @ git+https://github.com/matthiasprobst/ssnolib@v1514
     mongomock==4.1.2
     xmltodict<=0.13.0
     scipy>=1.10.1  # provides netcdf4
-    scikit-image>=0.21.0
+;     scikit-image>=0.21.0
+;     scikit-learn
     %(csv)s
     %(snt)s
     %(database)s
