--- a/setup.cfg
+++ b/setup.cfg
@@ -36,8 +36,7 @@ install_requires =
     pint_xarray >= 0.2.1, <=0.6.0
     regex>=2020.7.9
     packaging>=24.1
-;     ontolutils>=0.19.2,<0.20.0
-    ontolutils @ git+https://github.com/matthiasprobst/ontology-utils@0.20.1
+    ontolutils>=0.21.0,<0.20.0
     python-forge==18.6.0
     requests>=2.32.4
     pydantic~=2.8
