use ssnolib@develop

--- a/setup.cfg
+++ b/setup.cfg
@@ -61,7 +61,7 @@ test =
     pytest-cov>=5.0.0
     pylint
 ;     ssnolib>=1.5.1.4
-    ssnolib @ git+https://github.com/matthiasprobst/ssnolib@v1514
+    ssnolib @ git+https://github.com/matthiasprobst/ssnolib@develop
     mongomock==4.1.2
     xmltodict<=0.13.0
     scipy>=1.10.1  # provides netcdf4
