--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ matplotlib>=3.5.2
 IPython>=8.4.0
 pyyaml>6.0.0
 xarray>=2022.3.0
-pint==0.25.0
+pint>=0.24.4
 pint_xarray>=0.2.1,<=0.6.0
 regex>=2020.7.9
 packaging>=24.1
@@ -23,5 +23,5 @@ python-gitlab
 pypandoc>=1.11
 pydantic>=2.8.2,<3.0.0
 # other:
-ontolutils>=0.21.0,<0.20.0
+ontolutils>=0.21.0,<1.0.0
 click==8.1.7
