--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = h5rdmtoolbox
-version = 2.3.1
+version = 2.4.0
 author = Matthias Probst
 author_email = matth.probst@gmail.com
 description = Supporting a FAIR Research Data lifecycle using Python and HDF5.
@@ -31,11 +31,11 @@ install_requires =
     IPython >= 7.34.0  # colab wants 7.34.0
     pyyaml >= 6.0  # 5.4 does not work with python 3.11!
     xarray >= 2022.3.0
-    pint==0.25.0  # pint >= 0.19.2<0.22.0 Note: 0.22.0 shows bad str-output for quantities with format Lx~
+    pint>=0.24.4  # pint >= 0.19.2<0.22.0 Note: 0.22.0 shows bad str-output for quantities with format Lx~
     pint_xarray >= 0.2.1, <=0.6.0
     regex>=2020.7.9
     packaging>=24.1
-    ontolutils>=0.21.0,<0.20.0
+    ontolutils>=0.21.0,<1.0.0
     python-forge==18.6.0
     requests>=2.32.4
     pydantic~=2.8
