--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,3 +5,5 @@ pytest-cov>=5.0.0
 mongomock == 4.1.2
 scipy>=1.10.1
 ssnolib @ git+https://github.com/matthiasprobst/ssnolib@develop
+scikit-image>=0.21.0
+scikit-learn
