--- a/setup.cfg
+++ b/setup.cfg
@@ -65,8 +65,8 @@ test =
     mongomock==4.1.2
     xmltodict<=0.13.0
     scipy>=1.10.1  # provides netcdf4
-;     scikit-image>=0.21.0
-;     scikit-learn
+    scikit-image>=0.21.0
+    scikit-learn
     %(csv)s
     %(snt)s
     %(database)s
