fix pint-xarray issue

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,7 +40,7 @@ install_requires =
     requests>=2.32.4
     pydantic~=2.8
     rdflib~=7.1
-    click==8.1.7
+    click>=8.1.7
 
 [options.extras_require]
 database=
