--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,6 +4,6 @@ pytest>=8.3.3
 pytest-cov>=5.0.0
 mongomock == 4.1.2
 scipy>=1.10.1
-ssnolib @ git+https://github.com/matthiasprobst/ssnolib@develop
+ssnolib >= 1.5.1.3
 scikit-image>=0.21.0
 scikit-learn
