--- a/setup.cfg
+++ b/setup.cfg
@@ -35,7 +35,7 @@ install_requires =
     pint_xarray >= 0.2.1, <=0.6.0
     regex>=2020.7.9
     packaging>=24.1
-    ontolutils>=0.21.0,<1.0.0
+    ontolutils>=0.21.1,<1.0.0
     python-forge==18.6.0
     requests>=2.32.4
     pydantic~=2.8
@@ -60,8 +60,7 @@ test =
     pytest>=8.3.3
     pytest-cov>=5.0.0
     pylint
-;     ssnolib>=1.5.1.4
-    ssnolib @ git+https://github.com/matthiasprobst/ssnolib@develop
+    ssnolib >= 1.5.1.3
     mongomock==4.1.2
     xmltodict<=0.13.0
     scipy>=1.10.1  # provides netcdf4
