Support numpy and apply fixes along the way (#26)
# v2.4.0-rc.1

- allow numpy 2.x versions
- extend support for python 3.13
- upgrade pint to 0.25
- upgrade pint-xarray up to 0.6.0
- upgrading to ontolutils 0.21.1
- fixing linting issues
- RDF-subjects set for dataset and group are modelled with property schema:about to express that a dataset or group is
  described by the RDF subject. This is more in line with semantic web standards.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = h5rdmtoolbox
-version = 2.3.1
+version = 2.4.0-rc.1
 author = Matthias Probst
 author_email = matth.probst@gmail.com
 description = Supporting a FAIR Research Data lifecycle using Python and HDF5.
@@ -12,6 +12,7 @@ classifiers =
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
     Programming Language :: Python :: 3.12
+    Programming Language :: Python :: 3.13
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
     Development Status :: 4 - Beta
@@ -19,27 +20,28 @@ classifiers =
 
 [options]
 packages = find:
-python_requires = >=3.9, <3.13
+python_requires = >=3.9, <3.14
 include_package_data = True
 install_requires =
     appdirs~=1.4
     importlib_resources>=6.5.2, <7.0.0
-    numpy >= 1.20, < 2.0.0  # 2.0.0 fails with pint
+    numpy >= 1.20, < 3.0.0  # 2.0.0 fails with pint==0.21.1
     h5py~=3.8
     matplotlib >= 3.5.2
     IPython >= 7.34.0  # colab wants 7.34.0
     pyyaml >= 6.0  # 5.4 does not work with python 3.11!
     xarray >= 2022.3.0
-    pint==0.21.1  # pint >= 0.19.2<0.22.0 Note: 0.22.0 shows bad str-output for quantities with format Lx~
-    pint_xarray >= 0.2.1, <= 0.4.0
+    pint>=0.24.4  # pint >= 0.19.2<0.22.0 Note: 0.22.0 shows bad str-output for quantities with format Lx~
+    pint_xarray >= 0.2.1, <=0.6.0
     regex>=2020.7.9
     packaging>=24.1
-    ontolutils>=0.19.2,<0.20.0
+    ontolutils>=0.21.1,<1.0.0
     python-forge==18.6.0
     requests>=2.32.4
     pydantic~=2.8
     rdflib~=7.1
-    click==8.1.7
+    click>=8.1.7
+    cftime>=1.6.4
 
 [options.extras_require]
 database=
@@ -59,12 +61,12 @@ test =
     pytest>=8.3.3
     pytest-cov>=5.0.0
     pylint
-    scikit-image
-    ssnolib>=1.5.1.2
+    ssnolib >= 1.5.1.4
     mongomock==4.1.2
     xmltodict<=0.13.0
     scipy>=1.10.1  # provides netcdf4
     scikit-image>=0.21.0
+    scikit-learn
     %(csv)s
     %(snt)s
     %(database)s
