--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,7 +6,7 @@ on:
   push:
     branches:
       - main
-      - dev
+      - develop
 
 jobs:
   test:
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest, macos-latest, windows-latest ]
-        python-version: [ '3.9', '3.12']
+        python-version: [ '3.9', '3.10', '3.12', '3.13' ]
         mongodb-version: ['5.0', ]
 
     steps:
