add shacl_validate and update to 2.4.0

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = h5rdmtoolbox
-version = 2.4.0-rc.2
+version = 2.4.0
 author = Matthias Probst
 author_email = matth.probst@gmail.com
 description = Supporting a FAIR Research Data lifecycle using Python and HDF5.
@@ -42,6 +42,7 @@ install_requires =
     rdflib~=7.1
     click>=8.1.7
     cftime>=1.6.4
+    pyshacl>=0.30.1,<1.0.0
 
 [options.extras_require]
 database=
