--- a/setup.cfg
+++ b/setup.cfg
@@ -25,13 +25,13 @@ include_package_data = True
 install_requires =
     appdirs~=1.4
     importlib_resources>=6.5.2, <7.0.0
-    numpy >= 1.20, < 3.0.0  # 2.0.0 fails with pint==0.21.1
+    numpy >= 1.20, < 3.0.0
     h5py~=3.8
     matplotlib >= 3.5.2
     IPython >= 7.34.0  # colab wants 7.34.0
     pyyaml >= 6.0  # 5.4 does not work with python 3.11!
     xarray >= 2022.3.0
-    pint>=0.24.4  # pint >= 0.19.2<0.22.0 Note: 0.22.0 shows bad str-output for quantities with format Lx~
+    pint>=0.24.4
     pint_xarray >= 0.2.1, <=0.6.0
     regex>=2020.7.9
     packaging>=24.1
