--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,8 @@ python-gitlab
 pypandoc>=1.11
 pydantic>=2.8.2,<3.0.0
 # other:
-ontolutils>=0.22.0rc2,<1.0.0
+#ontolutils>=0.22.0rc2,<1.0.0
+ontolutils @ git+https://github.com/matthiasprobst/ontology-utils@develop-v0.22.0
 click>=8.1.7
 cftime>=1.6.4
 pyshacl>=0.30.1,<1.0.0
