--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = h5rdmtoolbox
-version = 2.5.1
+version = 2.5.2
 author = Matthias Probst
 author_email = matth.probst@gmail.com
 description = Supporting a FAIR Research Data lifecycle using Python and HDF5.
@@ -35,8 +35,7 @@ install_requires =
     pint_xarray >= 0.2.1, <=0.6.0
     regex>=2020.7.9
     packaging>=24.1
-;     ontolutils>=0.22.0rc2,<1.0.0
-    ontolutils @ git+https://github.com/matthiasprobst/ontology-utils@develop-v0.22.0
+    ontolutils>=0.22.0,<1.0.0
     python-forge==18.6.0
     requests>=2.32.4
     pydantic~=2.8
