update to ssnolib 2.1.0.2

--- a/setup.cfg
+++ b/setup.cfg
@@ -62,7 +62,7 @@ test =
     pytest>=8.3.3
     pytest-cov>=5.0.0
     pylint
-    ssnolib >= 1.5.1.4
+    ssnolib >= 2.1.0.2, < 3.0.0
     mongomock==4.1.2
     xmltodict<=0.13.0
     scipy>=1.10.1  # provides netcdf4
