--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,6 +4,6 @@ pytest>=8.3.3
 pytest-cov>=5.0.0
 mongomock == 4.1.2
 scipy>=1.10.1
-ssnolib >= 1.5.1.4
+ssnolib >= 2.1.0.2, < 3.0.0
 scikit-image>=0.21.0
 scikit-learn
