--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,6 +2,9 @@
 
 name: Tests
 
+env:
+  H5RDMTOOLBOX_CACHE_DIR: .cache/zenodo
+
 on:
   push:
     branches:
@@ -14,7 +17,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest, macos-latest, windows-latest ]
-        python-version: [ '3.9', '3.10', '3.12', '3.13' ]
+        python-version: [ '3.9', '3.11', '3.13' ]
         mongodb-version: ['5.0', ]
 
     steps:
@@ -47,12 +50,19 @@ jobs:
 #        uses: ankane/setup-mongodb@v1
 #        with:
 #          mongodb-version: 5.0
-
       - name: Start MongoDB (Linux)
         if: startsWith(matrix.os, 'ubuntu-')
         uses: supercharge/mongodb-github-action@1.3.0
         with:
           mongodb-version: ${{ matrix.mongodb-version }}
+
+      - name: Cache Zenodo downloads
+        uses: actions/cache@v4
+        with:
+          path: .cache/zenodo
+          key: zenodo-${{ runner.os }}-${{ hashFiles('**/pyproject.toml', '**/poetry.lock', '**/requirements*.txt') }}
+          restore-keys: |
+            zenodo-${{ runner.os }}-
 
       - name: Run pytest coverage
         env:
