--- a/setup.cfg
+++ b/setup.cfg
@@ -56,6 +56,8 @@ snt =
     tabulate>=0.8.10,<=0.9.0
     python-gitlab
     pypandoc >= 1.11
+catalog =
+    SPARQLWrapper>=2.0.0
 gui =
     PyQt5==5.15.10
 test =
