--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,94 +71,33 @@ catalog = [
 gui = [
     "PyQt5==5.15.10"
 ]
-test = [
+test-core = [
     "toml>0.10.0",
     "pytest>=8.3.3",
     "pytest-cov>=5.0.0",
     "pylint",
     "ssnolib>=2.2.0.2, <3.0.0",
     "mongomock==4.1.2",
-    "xmltodict<=0.13.0",
     "scipy>=1.10.1",
     "scikit-image>=0.21.0",
-    "scikit-learn",
-    "pandas>=1.4.3",
-    "tabulate>=0.8.10, <=0.9.0",
-    "python-gitlab",
-    "pypandoc>=1.11",
-    "pymongo>=4.2.0, <=4.10.1",
-    "SPARQLWrapper>=2.0.0"
+    "scikit-learn"
+]
+test = [
+    "h5rdmtoolbox[test-core,database,csv,snt,catalog]"
 ]
 docs = [
-    "pandas>=1.4.3",
-    "xmltodict<=0.13.0",
-    "tabulate>=0.8.10, <=0.9.0",
-    "python-gitlab",
-    "pypandoc>=1.11",
-    "pymongo>=4.2.0, <=4.10.1",
-    "pytest>=8.3.3",
-    "pytest-cov>=5.0.0",
-    "pylint",
-    "ssnolib>=2.2.0.2, <3.0.0",
-    "mongomock==4.1.2",
-    "scipy>=1.10.1",
-    "scikit-image>=0.21.0",
-    "scikit-learn",
-    "SPARQLWrapper>=2.0.0",
     "Sphinx==8.0.0",
     "sphinx_book_theme==1.1.3",
     "sphinx_copybutton==0.5.2",
     "sphinx_design==0.6.1",
     "myst_nb==1.2.0",
-    "sphinxcontrib_bibtex==2.6.3",
-    "scikit-image>=0.21.0",
-    "scikit-learn"
+    "sphinxcontrib_bibtex==2.6.3"
 ]
 complete = [
-    "tabulate>=0.8.10, <=0.9.0",
-    "PyQt5==5.15.10",
-    "pytest>=8.3.3",
-    "pytest-cov>=5.0.0",
-    "pylint",
-    "ssnolib>=2.2.0.2, <3.0.0",
-    "mongomock==4.1.2",
-    "xmltodict<=0.13.0",
-    "scipy>=1.10.1",
-    "scikit-image>=0.21.0",
-    "scikit-learn",
-    "pandas>=1.4.3",
-    "tabulate>=0.8.10, <=0.9.0",
-    "python-gitlab",
-    "pypandoc>=1.11",
-    "pymongo>=4.2.0, <=4.10.1",
-    "SPARQLWrapper>=2.0.0"
+    "h5rdmtoolbox[database,layout_validation,csv,snt,catalog,gui,test]"
 ]
 complete-with-docs = [
-    "tabulate>=0.8.10, <=0.9.0",
-    "PyQt5==5.15.10",
-    "pytest>=8.3.3",
-    "pytest-cov>=5.0.0",
-    "pylint",
-    "ssnolib>=2.2.0.2, <3.0.0",
-    "mongomock==4.1.2",
-    "xmltodict<=0.13.0",
-    "scipy>=1.10.1",
-    "scikit-image>=0.21.0",
-    "scikit-learn",
-    "pandas>=1.4.3",
-    "tabulate>=0.8.10, <=0.9.0",
-    "python-gitlab",
-    "pypandoc>=1.11",
-    "pymongo>=4.2.0, <=4.10.1",
-    "SPARQLWrapper>=2.0.0",
-    "Sphinx==8.0.0",
-    "sphinx_book_theme==1.1.3",
-    "sphinx_copybutton==0.5.2",
-    "sphinx_design==0.6.1",
-    "myst_nb==1.2.0",
-    "sphinxcontrib_bibtex==2.6.3",
-    "scikit-image>=0.21.0",
-    "scikit-learn"
+    "h5rdmtoolbox[complete,docs]"
 ]
 
 [project.urls]
