--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,3 +4,130 @@ requires = [
     "wheel"
 ]
 build-backend = "setuptools.build_meta"
+
+[project]
+name = "h5rdmtoolbox"
+version = "2.6.0"
+description = "Supporting a FAIR Research Data lifecycle using Python and HDF5."
+readme = "README.md"
+requires-python = ">=3.9, <3.14"
+license = "MIT"
+authors = [
+    {name = "Matthias Probst", email = "matth.probst@gmail.com"}
+]
+keywords = ["hdf5", "research data", "fair", "metadata"]
+classifiers = [
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Operating System :: OS Independent",
+    "Development Status :: 4 - Beta",
+    "Topic :: Scientific/Engineering"
+]
+dependencies = [
+    "appdirs~=1.4",
+    "importlib_resources>=6.5.2, <7.0.0",
+    "numpy>=1.20, <3.0.0",
+    "h5py~=3.8",
+    "matplotlib>=3.5.2",
+    "IPython>=7.34.0",
+    "pyyaml>=6.0",
+    "xarray>=2022.3.0",
+    "pint>=0.24.4",
+    "pint_xarray>=0.2.1, <=0.6.0",
+    "regex>=2020.7.9",
+    "packaging>=24.1",
+    "ontolutils>=0.27.5, <0.28.0",
+    "python-forge==18.6.0",
+    "requests>=2.32.4",
+    "pydantic~=2.8",
+    "rdflib~=7.1",
+    "click>=8.1.7",
+    "cftime>=1.6.4",
+    "pyshacl>=0.30.1, <1.0.0"
+]
+
+[project.optional-dependencies]
+database = [
+    "pymongo>=4.2.0, <=4.10.1"
+]
+layout_validation = [
+    "tabulate>=0.8.10, <=0.9.0"
+]
+csv = [
+    "pandas>=1.4.3"
+]
+snt = [
+    "xmltodict<=0.13.0",
+    "tabulate>=0.8.10, <=0.9.0",
+    "python-gitlab",
+    "pypandoc>=1.11"
+]
+catalog = [
+    "SPARQLWrapper>=2.0.0"
+]
+gui = [
+    "PyQt5==5.15.10"
+]
+test-core = [
+    "toml>0.10.0",
+    "pytest>=8.3.3",
+    "pytest-cov>=5.0.0",
+    "pylint",
+    "ssnolib>=2.2.0.2, <3.0.0",
+    "mongomock==4.1.2",
+    "scipy>=1.10.1",
+    "scikit-image>=0.21.0",
+    "scikit-learn"
+]
+test = [
+    "h5rdmtoolbox[test-core,database,csv,snt,catalog]"
+]
+docs = [
+    "Sphinx==8.0.0",
+    "sphinx_book_theme==1.1.3",
+    "sphinx_copybutton==0.5.2",
+    "sphinx_design==0.6.1",
+    "myst_nb==1.2.0",
+    "sphinxcontrib_bibtex==2.6.3"
+]
+complete = [
+    "h5rdmtoolbox[database,layout_validation,csv,snt,catalog,gui,test]"
+]
+complete-with-docs = [
+    "h5rdmtoolbox[complete,docs]"
+]
+
+[project.urls]
+Homepage = "https://h5rdmtoolbox.readthedocs.io/en/latest/"
+Documentation = "https://h5rdmtoolbox.readthedocs.io/en/latest/"
+Repository = "https://github.com/matthiasprobst/h5rdmtoolbox"
+"Bug Tracker" = "https://github.com/matthiasprobst/h5rdmtoolbox/issues"
+
+[project.scripts]
+h5tbx = "h5rdmtoolbox.cli:h5tbx"
+
+[tool.setuptools]
+include-package-data = true
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["h5rdmtoolbox*"]
+
+[tool.setuptools.package-data]
+h5rdmtoolbox = [
+    "data/*.yaml",
+    "data/*.yml",
+    "data/*.png",
+    "data/TbxLayout.hdf",
+    "data/EmptyLayout.hdf",
+    "data/style.css",
+    "tests/data/*",
+    "conventions/html/template.html"
+]
+
+[tool.pytest.ini_options]
+python_files = "test_*.py"
+testpaths = ["tests"]
