--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -9,7 +9,7 @@ python:
   install:
     - method: pip
       path: .
-      extra_require: complete-with-docs
+      extra_requirements: [complete-with-docs]
 
 sphinx:
   configuration: docs/conf.py
