--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
 requires = [
-    "setuptools>=78.1.1",
+    "setuptools>=78.1.1,<79.0.0",
     "wheel"
 ]
 build-backend = "setuptools.build_meta"
