--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install setuptools>=78.1.1,<79.0.0
+          pip install setuptools>=78.1.1
           pip install -e ".[test]"
 
 #      - name: Install MongoDB (Windows)  # see: https://github.com/ankane/setup-mongodb
@@ -107,7 +107,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install setuptools>=78.1.1,<79.0.0
+          pip install setuptools>=78.1.1
           pip install -e ".[test]"
 
       - name: Cleanup Zenodo Sandbox
